devops/kubernetes/app-with-db-local/app-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
     component: spring-web-todolist-postgres
  ports:
  - port: 8080
    targetPort: 8080
