devops/kubernetes/app-with-db-local/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app-cluster-ip-service
              servicePort: 8080
